--- a/libs/ui/src/lib/list/table/table.component.html
+++ b/libs/ui/src/lib/list/table/table.component.html
@@ -34,8 +34,8 @@
     <tbody role="rowgroup">
       <ng-container *ngFor="let row of data$ | async; let i = index">
         <tr class="mat-row" role="row" (click)="rowClick.emit(row)">
-          <ng-container *ngFor="let column of columns">
-            <td class="mat-cell mat-body-1" role="cell" [ngClass]="{ sticky: column.sticky }" [attr.headers]="column.name">
+          <ng-container *ngFor="let column of columns; let j = index">
+            <td class="mat-cell mat-body-1" role="cell" [ngClass]="{ sticky: column.sticky }" [attr.headers]="column.name" [attr.test-id]="'row_' + i + '_col_' + j">
               <ng-template
                 [ngTemplateOutlet]="column.template"
                 [ngTemplateOutletContext]="{ $implicit: row | deepKey:column.name, item: row, index: i }"
