--- a/libs/movie/src/lib/movie/form/end/end.component.html
+++ b/libs/movie/src/lib/movie/form/end/end.component.html
@@ -4,7 +4,7 @@
     <h1>Thank you !</h1>
     <p class="mat-body-1">Your title has been submitted to {{ app | appName }}.</p>
     <p class="mat-body-1">You will receive a notification and email from us when the title has been added to your catalog.</p>
-    <button mat-flat-button color="accent" (click)="navigate(movie.id)">
+    <button mat-flat-button color="accent" (click)="navigate(movie.id)" test-id="end-button">
       <span>Back to work</span>
       <mat-icon svgIcon="arrow_forward"></mat-icon>
     </button>
