fix festival - create movie

--- a/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
+++ b/libs/movie/src/lib/movie/form/additional-information/additional-information.component.html
@@ -155,7 +155,7 @@
       </section>
     </ng-container>
 
-    <section id="audience-goals" fxLayout="column" test-id="audience">
+    <section id="audience-goals" fxLayout="column" test-id="positioning">
       <h3>Positioning</h3>
       <bf-form-list [form]="audience.get('targets')">
         <ng-template itemRef let-target>{{ target }}</ng-template>
