--- a/apps/catalog/catalog/src/app/dashboard/tunnel/media-screener/media-screener.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/tunnel/media-screener/media-screener.component.html
@@ -4,7 +4,14 @@
     <h3>Screener</h3>
     <section>
       <p>This video is the full video of this title. It is public on the marketplace and can be seen by all Buyers on the marketplace. If you do not wish to share it, please contact us at {{ supportEmail }}.</p>
-      <file-uploader [form]="publicScreenerForm" [meta]="['movies', 'publicScreener', movieId]" accept="video" listenToChanges>
+      <file-uploader 
+        [form]="publicScreenerForm" 
+        (newSubscription)="shell.addSubToStack($event)"
+        [meta]="['movies', 'publicScreener', movieId]" 
+        accept="video" 
+        listenToChanges
+        pushSubToStack
+      >
         <h3 title>Upload Screener</h3>
       </file-uploader>
     </section>
