--- a/libs/movie/src/lib/movie/form/media-images/media-images.component.html
+++ b/libs/movie/src/lib/movie/form/media-images/media-images.component.html
@@ -13,7 +13,9 @@
             [queueIndex]="i | fileListIndex: stillPhoto.value"
             [form]="still"
             [formIndex]="i"
+            (newSubscription)="shell.addSubToStack($event)"
             listenToChanges
+            pushSubToStack
           >
             <h3 title>Stills</h3>
           </image-uploader>
