--- a/libs/campaign/src/lib/form/fundings/fundings.component.html
+++ b/libs/campaign/src/lib/form/fundings/fundings.component.html
@@ -80,7 +80,14 @@
         <br />
         This upload is optional, but this information might be very helpful to your potential investors.
       </p>
-      <file-uploader [form]="form.get('files').get('financingPlan')" [meta]="['campaigns', 'financingPlan', movieId]" accept="pdf" listenToChanges>
+      <file-uploader
+        [form]="form.get('files').get('financingPlan')"
+        [meta]="['campaigns', 'financingPlan', movieId]"
+        accept="pdf"
+        (newSubscription)="shell.addSubToStack($event)"
+        listenToChanges
+        pushSubToStack
+      >
         <h3 title>Upload File</h3>
       </file-uploader>
       <span class="mat-caption">Please note that this document will be available for download on the marketplace.</span>
