--- a/libs/movie/src/lib/movie/form/media-files/media-files.component.html
+++ b/libs/movie/src/lib/movie/form/media-files/media-files.component.html
@@ -9,7 +9,9 @@
         accept="pdf"
         [form]="form.promotional.get('presentation_deck')"
         [meta]="['movies', 'presentation_deck', movieId]"
+        (newSubscription)="shell.addSubToStack($event)"
         listenToChanges
+        pushSubToStack
       >
         <h3 title>Upload Presentation Deck</h3>
       </file-uploader>
@@ -24,7 +26,9 @@
         accept="pdf"
         [form]="form.promotional.get('scenario')"
         [meta]="['movies', 'scenario', movieId]"
+        (newSubscription)="shell.addSubToStack($event)"
         listenToChanges
+        pushSubToStack
       >
         <h3 title>Upload Scenario</h3>
       </file-uploader>
@@ -39,7 +43,9 @@
         accept="pdf"
         [form]="form.promotional.get('moodboard')"
         [meta]="['movies', 'moodboard', movieId]"
+        (newSubscription)="shell.addSubToStack($event)"
         listenToChanges
+        pushSubToStack
       >
         <h3 title>Upload Moodboard / Artistic Deck</h3>
       </file-uploader>
