--- a/libs/movie/src/lib/movie/form/shell/shell.component.html
+++ b/libs/movie/src/lib/movie/form/shell/shell.component.html
@@ -2,7 +2,7 @@
   <header fxLayout="row" fxLayoutAlign="space-between center">
     <tunnel-step-stat></tunnel-step-stat>
     <app-logo></app-logo>
-    <button test-id="tunnel-step-save" mat-stroked-button color="primary" (click)="layout.save()">
+    <button mat-stroked-button color="primary" (click)="layout.save()" test-id="tunnel-step-save">
       <mat-icon svgIcon="save"></mat-icon>
       <span>Save</span>
     </button>
