--- a/libs/movie/src/lib/movie/form/filters/release-year/release-year.component.html
+++ b/libs/movie/src/lib/movie/form/filters/release-year/release-year.component.html
@@ -8,6 +8,7 @@
   [formControl]="inverted"
   color="primary"
   invert
+  test-id="slider"
 ></mat-slider>
 <footer fxLayout fxLayoutAlign="space-between">
   <span class="mat-caption">1980</span>
