--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -24,7 +24,7 @@
   </list-page-search>
 
   <!-- FILTERS (ng-content) -->
-  <list-filter>
+  <list-filter test-id="filters">
 
     <ng-template filter label="Avails" [form]="availsForm">
       <form [availsFilter]="availsForm" vertical></form>
@@ -35,13 +35,13 @@
     </ng-template>
 
     <ng-template filter label="Genre" [form]="searchForm.genres">
-      <chips-autocomplete [form]="searchForm.genres" scope="genres">
+      <chips-autocomplete [form]="searchForm.genres" scope="genres" test-id="genre">
         <mat-label>Genre</mat-label>
       </chips-autocomplete>
     </ng-template>
 
     <ng-template filter label="Country of Origin" [form]="searchForm.originCountries">
-      <chips-autocomplete [form]="searchForm.originCountries" placeholder="Country of Origin" scope="territories" [withoutValues]="['world']">
+      <chips-autocomplete [form]="searchForm.originCountries" placeholder="Country of Origin" scope="territories" [withoutValues]="['world']" test-id="country">
         <mat-label>Type and select Country</mat-label>
       </chips-autocomplete>
     </ng-template>
@@ -67,7 +67,7 @@
   </list-filter>
 
   <!-- TITLE COUNT (ng-content)-->
-  <list-page-description *ngIf="nbHits">
+  <list-page-description *ngIf="nbHits" test-id="titles-count">
     <span i18n  class="mat-body-2">
       There {nbHits, plural, =1 {is} other {are}} {{ nbHits }} title{nbHits, plural, =1 {} other {s}}
       available.
