--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -60,7 +60,7 @@
 
     <list-filter-buttons (data)="load($event)"></list-filter-buttons>
 
-    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
+    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters" test-id="clear-filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
     </button>
