--- a/apps/financiers/financiers/src/app/dashboard/tunnel/summary/summary.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/tunnel/summary/summary.component.html
@@ -129,7 +129,7 @@
 
     <!-- Submit -->
     <button id="submit" test-id="submit" mat-flat-button color="accent" class="submit" (click)="submit()"
-      [disabled]="isPublished$ | async">
+      [disabled]="(isPublished$ | async) || (uploadService.finalizedUpload | async)">
       <span>Submit for Validation</span>
       <mat-icon svgIcon="arrow_forward"></mat-icon>
     </button>
