--- a/apps/festival/festival/src/app/dashboard/tunnel/summary/summary.component.scss
+++ b/apps/festival/festival/src/app/dashboard/tunnel/summary/summary.component.scss
@@ -17,7 +17,7 @@ mat-divider {
   margin-bottom: 36px;
 }
 
-button.submit, p.submit {
+span.submit, p.submit {
   margin: auto;
   margin-top: 16px;
 }
