--- a/apps/financiers/financiers/src/app/dashboard/tunnel/summary/summary.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/tunnel/summary/summary.component.html
@@ -128,11 +128,13 @@
     </section>
 
     <!-- Submit -->
-    <button id="submit" test-id="submit" mat-flat-button color="accent" class="submit" (click)="submit()"
-      [disabled]="(isPublished$ | async) || (uploadService.finalizedUpload | async)">
-      <span>Submit for Validation</span>
-      <mat-icon svgIcon="arrow_forward"></mat-icon>
-    </button>
+    <span class="submit" [matTooltip]="(uploadService.finalizedUpload | async) ? 'We\'re finishing the upload of your file first, please wait a few seconds before saving your Title.' : ''">
+      <button id="submit" test-id="submit" mat-flat-button color="accent" (click)="submit()"
+        [disabled]="(isPublished$ | async) || (uploadService.finalizedUpload | async)">
+        <span>Submit for Validation</span>
+        <mat-icon svgIcon="arrow_forward"></mat-icon>
+      </button>
+    </span>
   </ng-container>
 
 </tunnel-page>
